test/org/midica/testfiles/failing/chord-inside-block.midica
INCLUDE inc/instruments.midica

(
	CHORD testchord c d e
)
